add register driver and manage driver